<resources>
    <string name="app_name">Meal Pal</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="disc_frag">Discover Fragment</string>
    <string name="welcome_headline">Welcome to</string>
    <string name="title_activity_recipe">Recipe</string>
    <string name="modify_search">Modify Search</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="calories_icon">Calories Icon</string>
    <string name="button_view_recipe">View Recipe</string>
    <string name="calories_indicator">%1$s Cal./Serving</string>
    <string name="min_calories_label">Min Cal. %1$s</string>
    <string name="max_calories_label">Max Cal. %1$s</string>
    <string name="info_tag">"Info: "</string>
    <string name="yield_tag">"Recipe Yield: "</string>
    <string name="view_recipe_button">View Recipe</string>
    <string name="recipe_image_helper">Image of recipe</string>
    <string name="search_filters">Search Filters</string>
    <string name="search_keywords">Search Keywords</string>
    <string name="search_keyword">Search Keyword</string>
    <string name="button_apply">Apply</string>
    <string name="diet_health_labels">Diet/Health Labels</string>
    <string name="diet_label">Diet Label</string>
    <string name="health_label">Health Label</string>
    <string name="calories_label">Calories</string>
    <string name="no_results">No results 😓</string>
    <string name="retry">Retry</string>
    <string name="api_limit_exceeded">Whoa there cowboy🤠\n It looks like you have exceeded the beta trial api limits, don\'t worry this will not be an issue at release.</string>
    <string name="trending_header">Trending</string>
    <string name="settings">Settings</string>
    <string name="discover_label">Discover</string>
    <string name="my_meals_label">My Meals</string>
    <string name="search_icon">Search Icon</string>
    <string name="image_of_the_recipe_helper">Image of the recipe</string>
    <string name="view_instructions_button">View Instructions</string>
    <string name="ingredients_label">Ingredients</string>
    <string name="info_label">Info:</string>
    <string name="recipe_yield_label">Recipe Yield:</string>
    <string name="icon_save">Icon Save</string>
    <string name="image_of_ingredient">Image of ingredient</string>
    <string name="getting_started_text">Let\'s get started by learning your dietary and health needs, we will use this information to optimize the recipes shown.</string>
    <string name="navigate_next_screen">Navigate next screen</string>
    <string name="button_go">Let\'s Go</string>
    <string name="continue_onboarding">Continue</string>
    <string name="diet_question">What diet(s) best suit you?</string>
    <string name="optional_note">This is optional and can be updated later.</string>
    <string name="select_helper">Select diet options</string>
    <string name="balanced">Balanced</string>
    <string name="high_fiber">High-Fiber</string>
    <string name="high_protein">High-Protein</string>
    <string name="low_carb">Low-Carb</string>
    <string name="low_sodium">Low-Sodium</string>
    <string name="low_fat">Low-Fat</string>
    <string name="button_skip">Skip</string>
    <string name="health_helper">We will use this information to analyze recipes and warn you of any potential conflicts.</string>
    <string name="health_restrictions">Health Restrictions</string>
    <string name="health_options_tip">Select health options</string>
    <string name="health_alcohol_free">alcohol-free</string>
    <string name="health_alcohol_cocktail">alcohol-cocktail</string>
    <string name="health_celery_free">celery-free</string>
    <string name="health_crustacean_free">crustacean-free</string>
    <string name="health_dairy_free">dairy-free</string>
    <string name="health_dash">DASH</string>
    <string name="health_egg_free">egg-free</string>
    <string name="health_fish_free">fish-free</string>
    <string name="health_fodmap_free">fodmap-free</string>
    <string name="health_gluten_free">gluten-free</string>
    <string name="health_immuno_supportive">immuno-supportive</string>
    <string name="health_keto_friendly">keto-friendly</string>
    <string name="health_kidney_friendly">kidney-friendly</string>
    <string name="health_kosher">kosher</string>
    <string name="health_low_fat_abs">low-fat-abs</string>
    <string name="health_low_potassium">low-potassium</string>
    <string name="health_low_sugar">low-sugar</string>
    <string name="healt_lupine_free">lupine-free</string>
    <string name="health_mediterranean">Mediterranean</string>
    <string name="health_mollusk_free">mollusk-free</string>
    <string name="health_mustard_free">mustard-free</string>
    <string name="health_no_oil_added">no-oil-added</string>
    <string name="health_paleo">paleo</string>
    <string name="health_peanut_free">peanut-free</string>
    <string name="health_pescatarian">pescatarian</string>
    <string name="health_pork_free">pork-free</string>
    <string name="health_red_meat_free">red-meat-free</string>
    <string name="health_sesame_free">sesame-free</string>
    <string name="health_shellfish_free">shellfish-free</string>
    <string name="health_soy_free">soy-free</string>
    <string name="health_sugar_conscious">sugar-conscious</string>
    <string name="health_sulfite_free">sulfite-free</string>
    <string name="health_tree_nut_free">tree-nut-free</string>
    <string name="health_vegan">vegan</string>
    <string name="health_vegetarian">vegetarian</string>
    <string name="health_wheat_free">wheat-free</string>
    <string name="diet_balanced">Balanced</string>
    <string name="diet_high_fiber">High-Fiber</string>
    <string name="diet_high_protein">High-Protein</string>
    <string name="diet_low_carb">Low-Carb</string>
    <string name="diet_low_fat">Low-Fat</string>
    <string name="diet_low_sodium">Low-Sodium</string>
    <string name="warning">Warning</string>
    <string name="warning_description">This recipe does not adhere to the following dietary/health restrictions noted in your Meal Pal profile</string>
    <string name="approved_recipe">Approved Recipe</string>
    <string name="approved_description">This recipe adheres to all of the dietary and health restrictions noted in your Meal Pal profile.</string>
    <string name="keyword_helper">Enter a what you have eaten, like \"coffee and croissant\" or \"chicken enchilada\"</string>
    <string name="range_helper">Select a range of calories</string>
    <string name="none_selection_option">None</string>
    <string name="interaction_icon">Interaction Icon</string>
    <string name="more">More</string>
    <string name="no_internet_description">No Internet Image</string>
</resources>
